// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// Internal representation of a MetricValue API resource.
message MetricValue {
  // External identifier that can be used outside of the database layer.
  fixed64 external_id = 1;

  // Type of the API resource key.
  message ResourceKey {
    string data_provider_resource_id = 1;
    string campaign_resource_id = 2;
    string metric_requisition_resource_id = 3;
  }
  // Key identifying the resource in the API.
  ResourceKey resource_key = 2;

  // Key in the blob storage system for the underlying metric value data.
  string blob_storage_key = 3;

  // SHA-256 fingerprint of the blob's bytes.
  bytes blob_fingerprint = 4;
}
